src/objects/Address__c.object
<CustomObject>
    <description>Customer addresses</description>
    <fields>
        <fullName>AddressType__c</fullName>
        <description>Address type</description>
        <inlineHelpText>Enter address type</inlineHelpText>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                    <default>true</default>
                    <label>Billing</label>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City name</description>
        <inlineHelpText>Enter City</inlineHelpText>
        <label>City</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country drop-down list</description>
        <inlineHelpText>Select country</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                    <default>true</default>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <description>Like to customer object</description>
        <inlineHelpText>Select customer</inlineHelpText>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State or Region</description>
        <inlineHelpText>Enter state or region</inlineHelpText>
        <label>State or Region</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Street address</description>
        <inlineHelpText>Enter street address</inlineHelpText>
        <label>Street</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <description>Zip code</description>
        <inlineHelpText>Enter zip code</inlineHelpText>
        <label>Zip or Postal Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <nameField>
        <label>Address Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>